# boids_rust_capstone

./: .gitignore  Cargo.toml  LICENSE.MD  readme.md  test.csv
boidr/: .Rbuildignore  DESCRIPTION  ItHasToBeNamedBetter  NAMESPACE
boidr/R/: extendr-wrappers.R
boidr/man/: flock_detailed.Rd  flock_detailed_no_return.Rd  flock_return.Rd
boidr/src/: Makevars  Makevars.win  entrypoint.c
boidr/src/rust/: Cargo.toml
boidr/src/rust/src/: lib.rs
boidranalysis/: DESCRIPTION  ItHasToBeNamedBetter  boids-data_1668081603536.csv  boids-data_1668081616263.csv  boids-data_1668686523632.csv  execute_tests.rscript  heading_angles.R  helpers.R  results3.rds  sample.webm  test_markdown.Rmd
boidranalysis/R/: directions_angles.R  experiment1.R  experiment2.R  fitness_of_circular_dists.R  fitness_of_circular_dists_2.R  flock_metrics.R  helpers.R  todo.md  visual.R
boidranalysis/R/scratch/: animate.R  average_normalized_velocity.R  bearing_todo.R  compile_rust_r_package_and_run.R  convex_hull.R  convex_hull2.R  convex_hull_debug.R  curvature.R  curvature_singular.R  dbs_cluseting_rendering_graph.R  dbs_clustering_graphing.R  distance_test.R  finding_optimals_for_dbscan.R  fitting_circular_to_headings.R  flocking_basic_microbenchmark.R  graph_toroidal_movement.R  graphing_noise_levels.R  knn-mstn.R  lookup_table_for_2d_vision.R  noise_levels_generator.R  notes.md  notes2.md  prototyping_raycasting.R  prune_experimental_data.R  reading_configs.R  remove_boundary_before_after.R  remove_boundary_data.R  test.Rmd  test_execution.R  time_to_first_n_flocks.R  wedge_sketch.R
boidranalysis/tests/: headings_bearings_test.ggb
boidranalysis/tests/testthat/: test_directions_angles.R
boids_app/: Cargo.toml
boids_app/configs/: 0vicsek.toml  1normal.toml  22normal_s.toml  2normal_s.toml  3noisy_r_s.toml  3noisy_v_s.toml  4noise_r.toml  4noise_v.toml  basic.toml  basic.yaml  basic2.toml  basic3.toml  demo.toml  demo.yaml  density.toml  experiment1.toml  large_string.toml  mars.toml  mellow1.toml  rocket_dyamonds copy.toml  rocket_dyamonds.toml  string.toml  string.yaml  string_ball_hybrid.toml  string_ball_hybrid.yaml  string_l.toml  string_m.toml  string_s.toml  vicsek.toml
boids_app/src/: cliargs.rs  main.rs
boids_lib/: Cargo.toml
boids_lib/benches/: bench_compare.rs  bench_group.rs  boids_lib.rs
boids_lib/src/: birdwatcher.rs  boid.rs  boid2.rs  boid_backup.rs~  flock.rs  lib.rs  math_helpers.rs  options.rs
boids_lib/src/flock/: naive_tracker.rs  replay_tracker.rs  spathash_tracker.rs  tracker.rs
src/: birdwatcher.rs  boid.rs  cliargs.rs  flock.rs  main.rs  math_helpers.rs  options.rs
