[package]
name = "boids_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
clap = { version = "4.0.18", features = [ "derive" ]}
csv = "1.1.6"
nannou = "0.18.1"
nannou_egui = "0.5.0"
rand = "0.8.5"
serde = "1.0.147"
serde_json = "1.0.87"

[[bin]]
name = "main"
path = "src/main.rs"

# [[example]]
# name = "test"
# path = "src/test_perf.rs"