[package]
name = "boids_app"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = [ "derive" ]}
serde = "1.0.147"
nannou = "0.18.1"
nannou_egui = "0.5.0"
boids_lib = { path = "../boids_lib" }
csv = "1.1.6"
clap-serde-derive = "0.2.0"
serde_yaml = "0.9.14"
toml = "0.7.1"
splines = { version = "4.2.0", features = [ "glam"]}
itertools = "0.10.5"
circular-queue = "0.2.6"

# glam = "0.23.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
