[package]
name = "boids_lib"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "boids_lib"
harness = false

[[bench]]
name = "bench_group"
harness = false

[[bench]]
name = "bench_compare"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
chrono = "0.4.22"
csv = "1.1.6"
glam = "^0.17"
linfa = "0.6.0"
linfa-clustering = "0.6.0"
linfa-datasets = {version = "0.6.0", features = ["generate"]}
ndarray = "0.15.6"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
flat_spatial = "0.5.0"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
rstest = "0.16.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
