[package]
name = 'boidr'
version = '0.1.0'
edition = '2018'
resolver = "2"

[lib]
crate-type = [ 'staticlib' ]

[dependencies]
extendr-api = '*'
boids_lib = { path = "/Users/filipvlcek/Source/Repos/boids_rust/boids_lib"}
geo-types = "0.7.8"
geo = "0.23.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.87"
csv = "1.1.6"
voronoice = "0.2.0"
itertools = "0.10.5"
# boids_test_lib = { path = "./../../../boids_test_lib"}